@@ -2,6 +2,7 @@
 
 namespace Drupal\search_api\Plugin\search_api\processor\Property;
 
+use Drupal\Component\Utility\Html;
 use Drupal\Core\Form\FormStateInterface;
 use Drupal\Core\StringTranslation\StringTranslationTrait;
 use Drupal\search_api\IndexInterface;
@@ -68,7 +69,8 @@ class AggregatedFieldProperty extends ConfigurablePropertyBase {
       if (!$datasource_id && $name == 'aggregated_field') {
         continue;
       }
-      $field_options[$combined_id] = $datasource_labels[$datasource_id] . $property->getLabel();
+      $label = $datasource_labels[$datasource_id] . $property->getLabel();
+      $field_options[$combined_id] = Html::escape($label);
       if ($property instanceof ConfigurablePropertyInterface) {
         $description = $property->getFieldDescription($field);
       }
