@@ -316,8 +316,7 @@ class IntegrationTest extends SearchApiBrowserTestBase {
     $this->checkForMetaRefresh();
     $this->assertSession()->pageTextContains('The index was successfully saved.');
 
-    // @todo Make this work correctly.
-    // $this->assertUrl($this->getIndexPath('fields/add/nojs'), [], 'Correct redirect to index page.');
+    $this->assertSession()->addressEquals($this->getIndexPath());
     $this->assertHtmlEscaped($index_name);
 
     $this->drupalGet($this->getIndexPath('edit'));
@@ -756,8 +755,15 @@ class IntegrationTest extends SearchApiBrowserTestBase {
     $this->submitForm($edit, 'Save');
     $this->assertSession()->pageTextContains('The index was successfully saved.');
 
-    $this->addField(NULL, 'rendered_item');
+    $this->addField(NULL, 'rendered_item', 'Rendered HTML output');
     $this->assertHtmlEscaped($content_type_name);
+    $this->submitForm([], 'Save');
+    $this->assertSession()->pageTextContains(' The field configuration was successfully saved.');
+
+    $this->addField(NULL, 'aggregated_field', 'Aggregated field');
+    $this->assertHtmlEscaped($field_name);
+    $this->submitForm(['fields[entity:node/field__field_]' => TRUE], 'Save');
+    $this->assertSession()->pageTextContains(' The field configuration was successfully saved.');
   }
 
   /**
@@ -815,6 +821,7 @@ class IntegrationTest extends SearchApiBrowserTestBase {
     $this->assertArrayHasKey('body', $fields, 'body field is indexed.');
     $this->assertEquals('text', $fields['body']->getType(), 'Complex field mapping relationship works.');
 
+    // Test renaming of fields.
     $edit = [
       'fields[title][title]' => 'new_title',
       'fields[title][id]' => 'new_id',
@@ -830,17 +837,13 @@ class IntegrationTest extends SearchApiBrowserTestBase {
     $fields = $index->getFields();
 
     $this->assertArrayHasKey('new_id', $fields, 'title field is indexed.');
-    if (!empty($fields['new_id'])) {
-      $this->assertEquals($edit['fields[title][title]'], $fields['new_id']->getLabel(), 'title field title is saved.');
-      $this->assertEquals($edit['fields[title][id]'], $fields['new_id']->getFieldIdentifier(), 'title field id value is saved.');
-      $this->assertEquals($edit['fields[title][type]'], $fields['new_id']->getType(), 'title field type is text.');
-      $this->assertEquals($edit['fields[title][boost]'], $fields['new_id']->getBoost(), 'title field boost value is 21.');
-    }
+    $this->assertEquals($edit['fields[title][title]'], $fields['new_id']->getLabel(), 'title field title is saved.');
+    $this->assertEquals($edit['fields[title][id]'], $fields['new_id']->getFieldIdentifier(), 'title field id value is saved.');
+    $this->assertEquals($edit['fields[title][type]'], $fields['new_id']->getType(), 'title field type is text.');
+    $this->assertEquals($edit['fields[title][boost]'], $fields['new_id']->getBoost(), 'title field boost value is 21.');
 
     $this->assertArrayHasKey('revision_log', $fields, 'revision_log field is indexed.');
-    if (!empty($fields['revision_log'])) {
-      $this->assertEquals($edit['fields[revision_log][type]'], $fields['revision_log']->getType(), 'revision_log field type is search_api_test.');
-    }
+    $this->assertEquals($edit['fields[revision_log][type]'], $fields['revision_log']->getType(), 'revision_log field type is search_api_test.');
 
     // Reset field values to original.
     $edit = [
